message(STATUS "SKIPPING MDDUtil library (currently not used)")
#message(STATUS "${CMAKE_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_BINARY_DIR} ${CMAKE_CURRENT_BINARY_DIR}")



# set(libSrcsMDDUtilLibrary LoggingNotReady.c)
# add_library(MDDUtil STATIC ${libSrcsMDDUtilLibrary})
# install(TARGETS MDDUtil DESTINATION ${INSTALL_LIB})
